# python-digikamdb

./: .flake8  .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: automatic-test.yml  check.yml  notify.yml  release.yml  test.yml
digikamdb/: __init__.py  _sqla.py  _sqlalchemy.py  albumroots.py  albums.py  conn.py  connection.py  exceptions.py  image_comments.py  image_helpers.py  images.py  properties.py  settings.py  table.py  tags.py  types.py
docs/: Makefile  _sqla.py  api.rst  api_albums.rst  api_images.rst  api_tags.rst  conf.py  dbclasses.rst  index.rst  intro.rst  meta.rst  tutorial.rst
docs/_ext/: _sqla.py  apidoc_clean.py  apidoc_run.py  digikam4.db
tests/: __init__.py  base.py  comments.py  data.py  digikamrc.py  imagedata.py  mysql.py  newdata.py  sanity.py  sqlite.py
tests/data/: digikamrc.mysql  digikamrc.mysql-internal  digikamrc.sqlite  empty-15.sql.xz  empty-15.tar.xz  empty-16.tar.xz  empty.sql.xz  empty.tar.xz  testdb.sql.xz
