[project]
name = "Digikam-DB"
description = "Library to access Digikam metadata"
readme = "README.rst"
authors = [
    { name = "rcw-2", email = "mail@rcw-2.de" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["digikam"]
dependencies = ["sqlalchemy>=1.4"]
requires-python = ">=3.7"
dynamic = ["version"]

[project.urls]
documentation = "https://digikam-db.readthedocs.io"
homepage = "https://github.com/rcw-2/python-digikamdb"

[project.optional-dependencies]
docs = ["sphinx", "tomli; python_version < '3.11'"]
mysql = ["pymysql"]

[build-system]
requires = ["setuptools", "setuptools_scm>=6.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["digikamdb"]

[tool.setuptools_scm]
write_to = "digikamdb/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"

[tool.coverage.run]
source = ["digikamdb"]
branch = true
relative_files = true
parallel = true

